iptables.save
# Generated by iptables-save v1.8.4 on Fri May 13 21:56:28 2022
*nat
:PREROUTING ACCEPT [83:7960]
:INPUT ACCEPT [64:3912]
:OUTPUT ACCEPT [95:7345]
:POSTROUTING ACCEPT [95:7345]
-A POSTROUTING -s 10.49.0.0/16 -m policy --dir out --pol none -j MASQUERADE
COMMIT
# Completed on Fri May 13 21:56:28 2022
# Generated by iptables-save v1.8.4 on Fri May 13 21:56:28 2022
*mangle
:PREROUTING ACCEPT [1988:1826416]
:INPUT ACCEPT [1988:1826416]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [2300:213533]
:POSTROUTING ACCEPT [2300:213533]
COMMIT
# Completed on Fri May 13 21:56:28 2022
# Generated by iptables-save v1.8.4 on Fri May 13 21:56:28 2022
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [50:7216]
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p esp -j ACCEPT
-A INPUT -p ah -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -m hashlimit --hashlimit-upto 5/sec --hashlimit-burst 5 --hashlimit-mode srcip --hashlimit-name icmp-echo-drop -j ACCEPT
-A INPUT -p udp -m multiport --dports 51820 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -d 172.17.255.175/32 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 9022 -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -s 10.49.0.0/16 -d 10.49.0.0/16 -j DROP
-A FORWARD -s 10.49.0.0/16 -d 169.254.0.0/16 -j DROP
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -p tcp -m tcp --dport 445 -j DROP
-A FORWARD -p udp -m multiport --ports 137,138 -j DROP
-A FORWARD -p tcp -m multiport --ports 137,139 -j DROP
-A FORWARD -s 10.49.0.0/16 -m conntrack --ctstate NEW -m policy --dir in --pol none -j ACCEPT
-A OUTPUT -d 10.49.0.0/16 -m owner --gid-owner 15000 -j DROP
-A OUTPUT -d 169.254.0.0/16 -m owner --gid-owner 15000 -j DROP
COMMIT
# Completed on Fri May 13 21:56:28 2022
